objects/LLC_BI__External_Data_Mapping__c.object
<CustomObject>
    <description>This object associates an external data source with the required controlling criteria for the source data set.</description>
    <fields>
        <fullName>LLC_BI__External_Data_Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system populates this required lookup field to associate this record to the parent external data source. By default, it is blank.</description>
        <label>External Data Source</label>
        <referenceTo>LLC_BI__External_Data_Source__c</referenceTo>
        <relationshipLabel>External Data Mappings</relationshipLabel>
        <relationshipName>External_Data_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Dimension__c</fullName>
        <description>The system populates this required text field with the name of an attribute that the matrix must contain in order for the external data to successfully populate in the external result column. By default, it is blank.</description>
        <label>External Dimension</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Matrix_Dimension__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Users populate this required lookup field to set the existing dimension that the system references to determine how the external dimension associates to a customer’s matrix dimension. By default, it is blank.</description>
        <label>Matrix Dimension</label>
        <referenceTo>LLC_BI__Dimension_Definition__c</referenceTo>
        <relationshipLabel>External Data Mappings</relationshipLabel>
        <relationshipName>External_Data_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External Data Mapping</label>
    <nameField>
        <displayFormat>EDM-{00000}</displayFormat>
        <label>External Data Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Data Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>